[package]
name = "smart2ddoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
extended_eci = ["encoding_rs"]

[dependencies]
sha2 = "0.10.2"
p256="0.11.0"
arrayvec = "0.7"
flagset = "0.4"
encoding_rs = { version = "0.8", optional = true }
hex-literal="*"
to-binary="0.4.0"
base32 = "*"
image="*"
actix-web = "4.0.1"
actix-rt = "2.7.0"
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
datamatrix="0.3.0"

serde_json = "1.0"
derive_more = "0.99.2"
